03-alb-ingress-contorller/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tomcat8-deployment
  labels:
    app: tomcat8
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: tomcat8
    spec:
      containers:
      - image: tomcat:8
        imagePullPolicy: Always
        name:  tomcat8
        ports:
        - containerPort: 8080
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tomcat7-deployment
  labels:
    app: tomcat7
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: tomcat7
    spec:
      containers:
        - image: tomcat:7
          imagePullPolicy: Always
          name:  tomcat7
          ports:
            - containerPort: 8080
